# PythonSetup

./: .flake8  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: index.md
src/pythonsetup/: module3.py
src/pythonsetup/database/: __init__.py
src/pythonsetup/database/metadata/: module1.py
tests/pythonsetup/: test_database.py
